# ATS_V2

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  integration_notes.md  package-lock.json  pyproject.toml
.github/workflows/: ci.yml
apps/api-gateway/: README.md
apps/web-candidate/: README.md
apps/web-client-portal/: README.md  package-lock.json
apps/web-platform-admin/: .env.example  README.md  index.html  package-lock.json  package.json  (+2 more)
artifacts/: platform-admin-api-coverage.md
db/: __init__.py
docs/: 00_EXECUTIVE_IMPLEMENTATION_STRATEGY.md  01_ARCHITECTURE_AND_SERVICE_BOUNDARIES.md  02_PHASED_IMPLEMENTATION_ROADMAP.md  03_PHASE_0_REPO_INFRA_AND_ENGINEERING_STANDARDS.md  04_PHASE_1_DATABASE_AND_SHARED_FOUNDATIONS.md  05_PHASE_2_IDENTITY_SERVICE.md  06_PHASE_3_TENANT_CORE_RBAC_ABAC.md  07_PHASE_4_PLATFORM_ADMIN_SERVICE.md  08_PHASE_5_CONFIGURATION_FRAMEWORK.md  09_PHASE_6_CANDIDATE_SERVICE.md  10_PHASE_7_CORPORATE_ATS_SERVICE.md  11_PHASE_8_WORKFLOW_APPROVAL_ENGINE.md  12_PHASE_9_AGENCY_ATS_SERVICE.md  13_PHASE_10_EVENTS_AUDIT_NOTIFICATIONS.md  14_PHASE_11_INTEGRATION_FRAMEWORK.md  15_PHASE_12_AI_RECRUITER_SERVICE.md  16_PHASE_13_AI_INTERVIEW_TELEPHONY_SERVICE.md  17_PHASE_14_HITL_REVIEW_SERVICE.md  18_PHASE_15_BILLING_SUBSCRIPTION_METERING.md  19_PHASE_16_REPORTING_ANALYTICS.md  20_PHASE_17_COMPLIANCE_PRIVACY_RETENTION.md  21_PHASE_18_WHITE_LABEL_I18N_MOBILE.md  22_PHASE_19_PRODUCTION_HARDENING_SRE.md  23_API_STRATEGY_AND_ROUTE_MAP.md  24_FRONTEND_IMPLEMENTATION_PLAN.md  25_DATABASE_MIGRATION_AND_MODEL_PLAN.md  26_EVENT_CATALOG_AND_OUTBOX_PLAN.md  27_SECURITY_COMPLIANCE_AND_TENANT_ISOLATION_PLAN.md  28_AI_GOVERNANCE_AND_HITL_PLAN.md  29_TESTING_AND_QA_STRATEGY.md  30_DEV_TEAM_EXECUTION_PLAN.md  31_FIRST_30_DAYS_EXECUTION_PLAN.md  32_REQUIREMENT_TO_IMPLEMENTATION_PHASE_MAPPING.md  33_SERVICE_TO_TABLE_OWNERSHIP_MATRIX.md  34_RISK_REGISTER_AND_RELEASE_GATES.md  README.md
scripts/: bootstrap_platform_admin.py  db.py  dev.py  platform_admin_seed_data.py  reset_platform_admin_seed.py  smoke_platform_admin_api.py
(+232 files in other folders)
