[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "gnxthire-platform"
version = "0.0.0"
description = "Phase 0 monorepo foundation for gNxtHire."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.4,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "alembic>=1.13,<2.0",
  "psycopg[binary]>=3.2,<4.0",
  "redis>=5.0,<6.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-cov>=5.0,<6.0",
  "ruff>=0.6,<1.0",
  "mypy>=1.11,<2.0",
  "pre-commit>=3.8,<4.0",
]

[tool.setuptools.packages.find]
where = [
  "apps/api-gateway/src",
  "services/identity/src",
  "services/platform-admin/src",
  "packages/backend-common/src",
  "packages/contracts/src",
  "packages/testing/src",
]
include = ["gnxthire_*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
  "apps/api-gateway/src",
  "services/identity/src",
  "services/platform-admin/src",
  "packages/backend-common/src",
  "packages/contracts/src",
  "packages/testing/src",
]
addopts = "-q"

[tool.ruff]
target-version = "py312"
line-length = 100
src = [
  "apps/api-gateway/src",
  "services/identity/src",
  "services/platform-admin/src",
  "packages/backend-common/src",
  "packages/contracts/src",
  "packages/testing/src",
  "scripts",
  "tests",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ANN", "S"]
ignore = [
  "S101",
  "S404",
  "S603",
  "S607",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = [
  "apps/api-gateway/src",
  "services/identity/src",
  "services/platform-admin/src",
  "packages/backend-common/src",
  "packages/contracts/src",
  "packages/testing/src",
]
packages = [
  "gnxthire_api_gateway",
  "gnxthire_identity",
  "gnxthire_platform_admin",
  "gnxthire_common",
  "gnxthire_contracts",
  "gnxthire_testing",
]

[[tool.mypy.overrides]]
module = ["alembic.*"]
ignore_missing_imports = true
